test/extended/util/compat_otp/testdata/networking/microshift/multus-NAD-DHCP.yaml
apiVersion: k8s.cni.cncf.io/v1
kind: NetworkAttachmentDefinition
metadata:
  name: $nadname
  namespace: $namespace 
spec: 
  config: |
    {
      "cniVersion": "0.3.1",
      "name": "$nadname",
      "type": "$plugintype",
      "mode": "$mode",
      "bridge": "$bridgename",
      "ipam": {
        "type": "$ipamtype"
      }
    }
