test/extended/util/compat_otp/testdata/networking/microshift/multus-NAD-static.yaml
apiVersion: k8s.cni.cncf.io/v1
kind: NetworkAttachmentDefinition
metadata:
  name: $nadname
  namespace: $namespace 
spec: 
  config: |
    {
      "cniVersion": "0.3.1",
      "name": "$nadname",
      "type": "$plugintype",
      "mode": "$mode",
      "ipam": {
        "type": "$ipamtype",
        "addresses": [
          {
            "address": "$ipv4add"
          },
          {
            "address": "$ipv6add"
          }
        ]
      }
    }
