test/extended/util/compat_otp/testdata/networking/microshift/multus-pod-generic.yaml
kind: Pod
apiVersion: v1
metadata:
  name: $podname
  namespace: $namespace
  labels:
    name: $podlabel
  annotations:
    k8s.v1.cni.cncf.io/networks: $nadname
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
  - image: "quay.io/openshifttest/hello-sdn@sha256:c89445416459e7adea9a5a416b3365ed3d74f2491beb904d61dc8d1eb89a72a4"
    name: $podname
    securityContext:
      allowPrivilegeEscalation: false
    capabilities:
      drop: ["ALL"]
    env:
     - name: RESPONSE
       value: $podenvname
