test/extended/util/compat_otp/testdata/networking/microshift/np-allow-from-red.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-red
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          type: red
