test/extended/util/compat_otp/testdata/networking/microshift/np-allow-to-blue.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-blue
spec:
  podSelector:
    matchLabels:
      type: blue
  ingress:
  - {}
